--- a/src/app/pages/account/login-page/login-page.component.html
+++ b/src/app/pages/account/login-page/login-page.component.html
@@ -16,7 +16,7 @@
       </div>
     </div>
     <p class="uk-text-center">
-      <a href="/signup" class="uk-button uk-width-1-1 uk-button-large uk-button-primary uk-margin-small-botton">Quero me cadastrar</a>
+      <a [routerLink]="['/signup']" class="uk-button uk-width-1-1 uk-button-large uk-button-primary uk-margin-small-botton">Quero me cadastrar</a>
       <br/>
       <a href="/reset-password" class="uk-button uk-button-link">Esqueci minha senha</a>
     </p>
